# postwoman

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bundle-macos.sh
src/: app.rs  http.rs  main.rs  persist.rs  theme.rs
