[package]
name = "postwoman"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
